--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 #spring.datasource.url=jdbc:postgresql://localhost:5433/eventtracker?user=postgres&password=abc123
-spring.datasource.url=${JDBC_DATABASE_URL}
-#spring.datasource.url=jdbc:postgresql://localhost:5432/eventtracker?user=postgres&password=devPassword2
+#spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://localhost:5432/eventtracker?user=postgres&password=devPassword2
 spring.jpa.generate-ddl=true
